examples/test/testpolicy3385.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3385
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key18: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value21
          key7: value14
          key30: value45
      podSelector:
        matchLabels:
          key1: value9
          key13: value30
          key12: value17
